[gd_scene load_steps=17 format=3 uid="uid://pu8ioxa2h1wq"]

[ext_resource type="Script" path="res://Script/UI/MainMenu/main_menu.gd" id="1_adq35"]
[ext_resource type="Texture2D" uid="uid://byeipam8neafi" path="res://Art/BG/Menu/TitleScreenBG.png" id="2_0c5sh"]
[ext_resource type="StyleBox" uid="uid://dmmoqnu1vcbi" path="res://ResourceData/StyleBox/button_main_menu.tres" id="2_a34wg"]
[ext_resource type="FontFile" uid="uid://c5fpksk7u1rcn" path="res://ResourceData/Font/Maitree-Bold.ttf" id="3_63bhw"]
[ext_resource type="FontFile" uid="uid://da2b4sg5he2xb" path="res://ResourceData/Font/Roboto-Regular.ttf" id="3_ufej3"]
[ext_resource type="Script" path="res://Script/System/MenuTrigger/to_scene_button.gd" id="3_wkkbp"]
[ext_resource type="AudioStream" uid="uid://cpaul6whemku1" path="res://Audio/BGM/uplifting-pad-texture-113842.mp3" id="8_fmkq3"]
[ext_resource type="PackedScene" uid="uid://0rd41e8f6ghu" path="res://Scenes/UIComponent/save_slot.tscn" id="8_gt8yp"]

[sub_resource type="LabelSettings" id="LabelSettings_hhcby"]
font = ExtResource("3_63bhw")
font_size = 150
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.184314)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gt6m1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bd6a6"]

[sub_resource type="LabelSettings" id="LabelSettings_xe4jf"]
font = ExtResource("3_63bhw")
font_size = 120

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xj3bn"]

[sub_resource type="Animation" id="Animation_8wava"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Color:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_03kse"]
resource_name = "dissolve"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Color:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3gif4"]
_data = {
"RESET": SubResource("Animation_8wava"),
"dissolve": SubResource("Animation_03kse")
}

[node name="MainMenu" type="CanvasLayer" node_paths=PackedStringArray("first_select_button", "first_select_save", "main_option", "save_select", "animation_player", "defualt_focus")]
script = ExtResource("1_adq35")
first_select_button = NodePath("MainControl/Main/ButtonGroup/Start")
first_select_save = NodePath("MainControl/SaveSelect/SaveVBoxContainer/SaveSlot")
main_option = NodePath("MainControl/Main")
save_select = NodePath("MainControl/SaveSelect")
animation_player = NodePath("MainControl/FadeOnStart/AnimationPlayer")
defualt_focus = NodePath("MainControl/Main/ButtonGroup/Start")

[node name="MainControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="TextureRect" parent="MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0c5sh")

[node name="Main" type="Control" parent="MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainControl/Main"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 307.0
offset_top = 195.0
offset_right = 1527.0
offset_bottom = 443.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Spirimental"
label_settings = SubResource("LabelSettings_hhcby")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonGroup" type="VBoxContainer" parent="MainControl/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 713.0
offset_top = 744.0
offset_right = -751.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Start" type="Button" parent="MainControl/Main/ButtonGroup"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Settings")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ufej3")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_gt6m1")
theme_override_styles/hover = ExtResource("2_a34wg")
theme_override_styles/focus = ExtResource("2_a34wg")
text = "Start"

[node name="Settings" type="Button" parent="MainControl/Main/ButtonGroup"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Credit")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ufej3")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_gt6m1")
theme_override_styles/hover = ExtResource("2_a34wg")
theme_override_styles/focus = ExtResource("2_a34wg")
text = "Option"

[node name="Credit" type="Button" parent="MainControl/Main/ButtonGroup"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ufej3")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_gt6m1")
theme_override_styles/hover = ExtResource("2_a34wg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bd6a6")
theme_override_styles/focus = ExtResource("2_a34wg")
text = "Credit"
script = ExtResource("3_wkkbp")
next_scene_file = "res://Scenes/Menu/credit.tscn"

[node name="Quit" type="Button" parent="MainControl/Main/ButtonGroup"]
layout_mode = 2
focus_neighbor_top = NodePath("../Credit")
focus_neighbor_bottom = NodePath("../Start")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_colors/font_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ufej3")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxTexture_gt6m1")
theme_override_styles/hover = ExtResource("2_a34wg")
theme_override_styles/focus = ExtResource("2_a34wg")
text = "Quit"

[node name="SaveSelect" type="Control" parent="MainControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MainControl/SaveSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 0.980392)

[node name="SaveVBoxContainer" type="VBoxContainer" parent="MainControl/SaveSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainControl/SaveSelect/SaveVBoxContainer"]
layout_mode = 2
text = "SAVE SELECT"
label_settings = SubResource("LabelSettings_xe4jf")
horizontal_alignment = 1

[node name="SaveSlot" parent="MainControl/SaveSelect/SaveVBoxContainer" node_paths=PackedStringArray("bottom_node") instance=ExtResource("8_gt8yp")]
layout_mode = 2
index = 1
bottom_node = NodePath("../SaveSlot2")

[node name="SaveSlot2" parent="MainControl/SaveSelect/SaveVBoxContainer" node_paths=PackedStringArray("up_node", "bottom_node") instance=ExtResource("8_gt8yp")]
layout_mode = 2
index = 2
up_node = NodePath("../SaveSlot")
bottom_node = NodePath("../SaveSlot3")

[node name="SaveSlot3" parent="MainControl/SaveSelect/SaveVBoxContainer" node_paths=PackedStringArray("up_node", "bottom_node") instance=ExtResource("8_gt8yp")]
layout_mode = 2
index = 3
up_node = NodePath("../SaveSlot2")
bottom_node = NodePath("../SaveSlot4")

[node name="SaveSlot4" parent="MainControl/SaveSelect/SaveVBoxContainer" node_paths=PackedStringArray("up_node") instance=ExtResource("8_gt8yp")]
layout_mode = 2
index = 4
up_node = NodePath("../SaveSlot3")

[node name="Back" type="Button" parent="MainControl/SaveSelect"]
layout_mode = 0
offset_left = 1737.0
offset_top = 973.0
offset_right = 1866.0
offset_bottom = 1064.0
theme_override_fonts/font = ExtResource("3_63bhw")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_xj3bn")
text = "Back"

[node name="FadeOnStart" type="Control" parent="MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainControl/FadeOnStart"]
libraries = {
"": SubResource("AnimationLibrary_3gif4")
}

[node name="Color" type="ColorRect" parent="MainControl/FadeOnStart"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Audio" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_fmkq3")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainControl/Main/ButtonGroup/Start" to="." method="start_game"]
[connection signal="pressed" from="MainControl/Main/ButtonGroup/Settings" to="." method="settings_menu"]
[connection signal="focus_entered" from="MainControl/Main/ButtonGroup/Credit" to="." method="play_ui_select"]
[connection signal="pressed" from="MainControl/Main/ButtonGroup/Credit" to="." method="play_ui_pressed"]
[connection signal="focus_entered" from="MainControl/Main/ButtonGroup/Quit" to="MainControl" method="play_ui_select"]
[connection signal="pressed" from="MainControl/Main/ButtonGroup/Quit" to="." method="quit_game"]
[connection signal="pressed" from="MainControl/SaveSelect/Back" to="." method="back"]
